# maximus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.es.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  action.yml  package.json
crates/maximus-checks/: Cargo.toml
crates/maximus-checks/src/: check_outcome.rs  config_duplicates.rs  editorconfig_prettier.rs  env.rs  eslint_prettier.rs  ignore_file_drift.rs  jsx_config.rs  lib.rs  lockfiles.rs  module_system.rs  monorepo_tsconfig.rs  node_matrix.rs  npmignore_files.rs  package_entrypoints.rs  registry.rs  structure.rs  test_runner_config.rs  tsconfig.rs  vite_tsconfig_alias.rs  workspace_config.rs
crates/maximus-checks/tests/: basic_checks.rs  coherence_checks.rs  editorconfig_prettier_registry.rs  env_checks.rs  ignore_file_drift_checks.rs  lockfiles_checks.rs  lockfiles_registry.rs  node_matrix_checks.rs  npmignore_files_checks.rs  package_entrypoints_checks.rs  package_entrypoints_registry.rs  structure_checks.rs  test_runner_config_registry.rs  tsconfig_checks.rs  vite_tsconfig_alias_registry.rs  workspace_config_registry.rs
crates/maximus-cli/: Cargo.toml
crates/maximus-cli/src/: args.rs  exit_codes.rs  fail_policy.rs  main.rs  report_diff.rs  report_json.rs  report_ko.rs  report_markdown.rs  report_sarif.rs  report_text.rs
crates/maximus-cli/tests/: cli_help.rs  config_and_filtering.rs  exit_code_policy.rs  fix_selection_and_diff.rs  mvp_parity.rs  output_file.rs
crates/maximus-core/: Cargo.toml
crates/maximus-core/src/: baseline.rs  config.rs  fs.rs  (+8 more)
(+150 files in other folders)
