[package]
name = "maximus-checks"
version = "0.1.3"
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/JeremyDev87/maximus"
description = "Rust checks bootstrap crate for Maximus."

[lib]
path = "src/lib.rs"

[dependencies]
maximus-core = { path = "../maximus-core" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
