[package]
name = "maximus-cli"
version = "0.1.3"
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/JeremyDev87/maximus"
description = "Rust CLI bootstrap crate for Maximus."

[[bin]]
name = "maximus"
path = "src/main.rs"

[dependencies]
maximus-checks = { path = "../maximus-checks" }
maximus-core = { path = "../maximus-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
