[package]
name = "maximus-core"
version = "0.1.2"
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/JeremyDev87/maximus"
description = "Rust core bootstrap crate for Maximus."

[lib]
path = "src/lib.rs"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
jsonc-parser = { version = "0.32.3", features = ["serde"] }
icu_collator = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
proptest = "1"
tempfile = "3"
